update swagger for flask
