# stub/swagger_server/swagger/swagger.yaml
@@ -21,10 +21,102 @@ paths:
                   $ref: '#/components/schemas/Exercise'
                 x-content-type: application/json
       x-openapi-router-controller: swagger_server.controllers.default_controller
+  /exercises/body_part/{bodyPart}:
+    get:
+      summary: Get exercises for a specific body part
+      operationId: controller_get_exercises_by_body_part
+      parameters:
+      - name: bodyPart
+        in: path
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      responses:
+        "200":
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Exercise'
+                x-content-type: application/json
+      x-openapi-router-controller: swagger_server.controllers.default_controller
+  /exercises/target/{target}:
+    get:
+      summary: Get exercises for a specific target
+      operationId: controller_get_exercises_by_target
+      parameters:
+      - name: target
+        in: path
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      responses:
+        "200":
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Exercise'
+                x-content-type: application/json
+      x-openapi-router-controller: swagger_server.controllers.default_controller
   /foods:
     get:
       summary: Get a list of foods
       operationId: controller_get_foods
+      responses:
+        "200":
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Food'
+                x-content-type: application/json
+      x-openapi-router-controller: swagger_server.controllers.default_controller
+  /foods/diet/{diet}:
+    get:
+      summary: Get foods for a specific diet
+      operationId: controller_get_foods_by_diet
+      parameters:
+      - name: diet
+        in: path
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
+      responses:
+        "200":
+          description: Success
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Food'
+                x-content-type: application/json
+      x-openapi-router-controller: swagger_server.controllers.default_controller
+  /foods/meal_type/{mealType}:
+    get:
+      summary: Get foods for a specific meal type
+      operationId: controller_get_foods_by_meal_type
+      parameters:
+      - name: mealType
+        in: path
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: string
       responses:
         "200":
           description: Success
